fix letter spacing last letter margin

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -27,7 +27,8 @@ $color-primary: blueviolet;
 }
 
 .textBox {
-  // margin-top: -50px;
+  margin-top: -5%;
+  margin-right: -25px;
 }
 
 .headerPrimary {
